Ensure phone number doesn't line break on internal whitespace
Refs: ts/dev/askizzy#113

--- a/src/pages/personalisation/AreYouSafe.scss
+++ b/src/pages/personalisation/AreYouSafe.scss
@@ -9,6 +9,10 @@
         width: 75%;
         margin: 40px auto;
         text-align: center;
+
+        .phone-number {
+            white-space: nowrap;
+        }
     }
 
     .PhoneIcon {
